[gd_scene load_steps=11 format=3 uid="uid://bt54mtmue4btg"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_a0a6j"]
[ext_resource type="Texture2D" uid="uid://csl6gxu6iu0i1" path="res://Assets/kenney_tiny-dungeon/Tiles/tile_0085.png" id="1_hxuyt"]
[ext_resource type="Texture2D" uid="uid://dwgiknhalj5pm" path="res://Assets/kenney_tiny-dungeon/Tiles/tile_0104.png" id="3_kk6y4"]
[ext_resource type="Texture2D" uid="uid://cymvme8dqaqcl" path="res://Assets/kenney_tiny-town/Tiles/tile_0118.png" id="4_rh2dr"]
[ext_resource type="AudioStream" uid="uid://bvfu6rlt4k7ti" path="res://Assets/damage.ogg" id="5_4aiwr"]
[ext_resource type="PackedScene" uid="uid://ds64a1f8gfted" path="res://Scenes/health_bar.tscn" id="5_n31kr"]
[ext_resource type="AudioStream" uid="uid://dh8niqdsyrx8y" path="res://Assets/arrow shoot.ogg" id="6_obrk8"]
[ext_resource type="AudioStream" uid="uid://up1g388jdhhw" path="res://Assets/sword hit.ogg" id="7_vrqs4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hauls"]
radius = 6.0
height = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_87q2c"]
size = Vector2(16, 8)

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_a0a6j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_hauls")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_hxuyt")

[node name="WeaponHolder" type="Marker2D" parent="."]

[node name="Melee" type="Area2D" parent="WeaponHolder"]
visible = false
position = Vector2(11, 0)

[node name="Sprite2D" type="Sprite2D" parent="WeaponHolder/Melee"]
position = Vector2(6, 0)
rotation = 1.5708
texture = ExtResource("3_kk6y4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponHolder/Melee"]
position = Vector2(6, 0)
shape = SubResource("RectangleShape2D_87q2c")

[node name="Ranged" type="Marker2D" parent="WeaponHolder"]
position = Vector2(13, 0)

[node name="Sprite2D" type="Sprite2D" parent="WeaponHolder/Ranged"]
texture = ExtResource("4_rh2dr")

[node name="Timer" type="Timer" parent="WeaponHolder/Ranged"]

[node name="HealthBar" parent="." instance=ExtResource("5_n31kr")]
step = 1.0

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("5_4aiwr")

[node name="Shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_obrk8")

[node name="Sword" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_vrqs4")

[connection signal="body_entered" from="WeaponHolder/Melee" to="." method="_on_melee_body_entered"]
[connection signal="timeout" from="WeaponHolder/Ranged/Timer" to="." method="_on_timer_timeout"]
